# ivy-dated

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  parse.rs  resolve.rs
tests/data/: ivy.xml
