[package]
name = "ivy-dated"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"

[dependencies]
colored = "2.0"
chrono = "0.4"
chrono-humanize = "0.2"
env_logger = "0.8"
log = "0.4"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.4"
structopt = "0.3"